Line break anywhere on the bundle title, just to avoid overflowing the sonhos container

--- a/web/dashboard/backend/src/main/sass/components/_sonhos-bundles.scss
+++ b/web/dashboard/backend/src/main/sass/components/_sonhos-bundles.scss
@@ -41,6 +41,7 @@
             color: #29a6fe;
             font-weight: bold;
             text-align: center;
+            overflow-wrap: anywhere; // Just because Loritta Canary has loooong bundle titles
         }
 
         button {
